Pick up astrogrid classes for MySpace browsing

--- a/topcat/.properties
+++ b/topcat/.properties
@@ -2,4 +2,4 @@ jar.class.path=epsgraphics_classes.jar acme_encoding.jar jel_g.jar \
  ivoafits-notamfits-0.2.jar \
  ../util/util.jar ../pal/pal.jar ../table/table.jar \
  ../mirage/mirage.jar ../treeview/treeview.jar \
- ../help/jhall.jar
+ ../help/jhall.jar ../astrogrid/astrogrid.jar
