--- a/astrogrid/build.xml
+++ b/astrogrid/build.xml
@@ -950,7 +950,6 @@
 
     <mkdir dir="${build.tests}"/>
 
- <!--
     <javac srcdir="${tests.dir}"
            destdir="${build.tests}"
            debug="${debug}"
@@ -959,7 +958,6 @@
 
       <classpath refid="tests-classpath"/>
     </javac>
-  -->
 
   </target>
 
@@ -976,7 +974,6 @@
           depends="compile-tests"
           if="junit.present">
 
- <!--
     <junit printsummary="${junit.summary}" haltonfailure="yes"
            filtertrace="${junit.filtertrace}"
            fork="${junit.fork}">
@@ -996,11 +993,11 @@
       <batchtest>
         <fileset dir="${tests.dir}">
           <include name="**/JUnit*"/>
+          <include name="**/*Test*"/>
         </fileset>
       </batchtest>
 
     </junit>
- -->
 
   </target>
 
