--- a/treeview/.properties
+++ b/treeview/.properties
@@ -3,4 +3,5 @@ jar.class.path=commons-net-1.0.0.jar ../array/array.jar ../table/table.jar \
 ../jnihds/jnihds.jar ../hds/hds.jar ../hdx/hdx.jar ../ndx/ndx.jar \
 ../votable/votable.jar ../util/util.jar ../topcat/topcat.jar \
 ../jsky/jsky.jar ../jaiutil/jaiutil.jar ../splat/splat.jar \
-../sog/sog.jar ../axis/axis.jar ../ant.jar
+../sog/sog.jar ../axis/axis.jar ../ant.jar ../astrogrid/astrogrid.jar \
+../aglib/aglib.jar 
