--- a/treeview/build.xml
+++ b/treeview/build.xml
@@ -80,7 +80,7 @@
   <!-- Define the package name and current versions -->
   <property name="Name" value="Treeview"/>
   <property name="name" value="treeview"/>
-  <property name="version" value="2.2-1"/>
+  <property name="version" value="2.3"/>
 
   <!-- The Java package name -->
   <property name="package.name" value="uk.ac.starlink.treeview"/>
@@ -728,6 +728,8 @@
          <extension name="SOG-PARTS" href="sog-parts.jnlp"/>
          <extension name="JNIAST" href="jniast.jnlp"/>
          <extension name="JNIHDS" href="jnihds.jnlp"/>
+         <extension name="ASTROGRID" href="astrogrid.jnlp"/>
+         <extension name="AGLIB" href="aglib.jnlp"/>
        </resources>
        <component_desc/>
      </jnlp>
