--- a/table/build.xml
+++ b/table/build.xml
@@ -414,11 +414,12 @@
     </jar>
 
     <!-- Sign all jar files -->
-    <signjar jar="${dist.lib.pkg}/${name}.jar"
-             alias="${webstart.alias}"
+    <signjar alias="${webstart.alias}"
              keystore="${webstart.keystore}"
              keypass="${webstart.keypass}"
-             storepass="${webstart.storepass}"/>
+             storepass="${webstart.storepass}">
+      <fileset dir="${dist.lib}" includes="**/*.jar"/>
+    </signjar>
   </target>
 
   <!--
