--- a/jetty/.properties
+++ b/jetty/.properties
@@ -1,2 +1,1 @@
-jar.class.path=javax.servlet.jar javax.xml.jaxp.jar \
-org.apache.crimson.jar org.apache.jasper.jar
+jar.class.path=javax.servlet.jar org.apache.jasper.jar
