--- a/jniast/build.xml
+++ b/jniast/build.xml
@@ -479,6 +479,10 @@
       <param name="pj.cfile" value="grismmap.c"/>
     </antcall>
     <antcall target="perl_to_java">
+      <param name="pj.class" value="KeyMap"/>
+      <param name="pj.cfile" value="keymap.c"/>
+    </antcall>
+    <antcall target="perl_to_java">
       <param name="pj.class" value="LutMap"/>
       <param name="pj.cfile" value="lutmap.c"/>
     </antcall>
@@ -763,6 +767,7 @@
       <class name="${package.name}.FrameSet"/>
       <class name="${package.name}.GrismMap"/>
       <class name="${package.name}.IntraMap"/>
+      <class name="${package.name}.KeyMap"/>
       <class name="${package.name}.LutMap"/>
       <class name="${package.name}.Mapping"/>
       <class name="${package.name}.MathMap"/>
