--- a/jetty/.properties
+++ b/jetty/.properties
@@ -1,1 +1,1 @@
-jar.class.path=javax.servlet.jar org.apache.jasper.jar
+jar.class.path=javax.servlet.jar org.mortbay.jmx.jar jasper-compiler.jar jasper-runtime.jar
