Make Axis a dependency of JSky. Do this so we can use the Jarkarta commons logging system, instead of log4j. Log4j needs to be removed as it is chosen in preference to the Java 1.4 logging system, which leads to some chaos.

--- a/jsky/.properties
+++ b/jsky/.properties
@@ -1,2 +1,2 @@
-jar.class.path=hcompress.jar jel.jar jfreechart.jar jcommon.jar log4j.jar \
-dom4j.jar ../diva/diva.jar ../tamfits/tamfits.jar
+jar.class.path=hcompress.jar jel.jar jfreechart.jar jcommon.jar \
+dom4j.jar ../diva/diva.jar ../tamfits/tamfits.jar ../axis/axis.jar
