Switch off information messaging from Jetty and SOAPSERVER. This replaces a class in SOAPSERVER, so do not remove.

--- a/util/src/etc/logging.properties
+++ b/util/src/etc/logging.properties
@@ -19,3 +19,7 @@ java.util.prefs.level = SEVERE
 
 # Set the default level for logging from Starlink loggers.
 uk.ac.starlink.level = WARNING
+
+# Make the SOAPSERVER package quieter.
+uk.ac.starlink.soapserver.level = SEVERE
+org.mortbay.level = SEVERE
