Removed dependency on ../ant.jar.  The classes required were in package org.apache.tools.bzip2; these are now included as a third-party jar apache-bzip2.jar, which I got by just lifting the relevant classes from ant.jar itself.

--- a/treeview/.properties
+++ b/treeview/.properties
@@ -1,7 +1,8 @@
-jar.class.path=commons-net-1.0.0.jar ../array/array.jar ../table/table.jar \
+jar.class.path=commons-net-1.0.0.jar apache-tar.jar \
+../array/array.jar ../table/table.jar \
 ../jniast/jniast.jar ../tamfits/tamfits.jar ../fits/fits.jar \
 ../jnihds/jnihds.jar ../hds/hds.jar ../hdx/hdx.jar ../ndx/ndx.jar \
 ../votable/votable.jar ../util/util.jar ../topcat/topcat.jar \
 ../jsky/jsky.jar ../jaiutil/jaiutil.jar ../splat/splat.jar \
-../sog/sog.jar ../axis/axis.jar ../ant.jar ../astrogrid/astrogrid.jar \
+../sog/sog.jar ../axis/axis.jar ../astrogrid/astrogrid.jar \
 ../aglib/aglib.jar 
